# Oura

./: .gitignore  CMakeLists.txt  LICENSE  OuroLang_Spec_2_0.md  README.md  build.zig  dummy.c  ouro_lang.cc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
OuroLang_cpp/: main.cc  main.cpp
Ouroboros/Ouroboros_Compiler/examples/: hello_world.ouro  simple_calc.ouro
cmake/: toolchain.cmake
docs/: architecture.md  build_system.md  contrib.md  modules.md  swift_comparison.md  testing.md
include/ourolang/: arena.h  ast.h  ast.hpp  interpreter.h  interpreter.hpp  lexer.h  lexer.hpp  parser.h  parser.hpp  repl.h  repl.hpp  token.hpp  type_checker.h  type_checker.hpp
ouro_mod/src/: main.cc
ouro_mod/tests/: foundation_tests.cc
ouroboros-lang/ouroboros/: Makefile  OuroborosVSCode_Installation.md  ast.c  ast_types.h  class.c  class.h  concurrency.c  concurrency.h  eval.c  eval.h  event.c  event.h  graphics.c  graphics.h  gui.c  gui.h  http.c  http.h  instance.c  instance.h  ir.c  ir.h  lexer.c  lexer.h  main.c  method.c  method.h  module.c  module.h  network.c  network.h  opengl.c  opengl.h  optimize.c  optimize.h  parser.c  parser.h  runtime.c  runtime.h  semantic.c  (+16 more)
scripts/: install_zig.sh
src/: CMakeLists.txt  codegen.cc  core.cc  core.impl.cc  ir.cc  main.cc  main.cpp  parser.cc  parser.impl.cc  placeholder.cpp  repl_binding.cc
src/engine/: app.zig  graphics.zig  platform.zig
tests/: CMakeLists.txt  codegen_tests.cc  lexer_tests.cc  lexer_tests.cpp
tools/fuzz/: README.md
zig_nvim/src/: main.zig
(+43 files in other folders)
